cmake_minimum_required(VERSION 3.27)
project(leetcode)

set(CMAKE_CXX_STANDARD 17)



add_executable(209_window Vector/209_window.cpp)
add_executable(718 Vector/718.cpp)
add_executable(ListNodeStudy List/ListNodeStudy.cpp)
add_executable(203 List/203.cpp)
add_executable(DoubleListNode List/DoubleListNodeStudy.cpp)
add_executable(203_2 List/203_2.cpp)
add_executable(203_3 List/203_3.cpp)
add_executable(707 List/707.cpp)
add_executable(707_2 List/707_2.cpp)
add_executable(206 List/206.cpp)
add_executable(232 Stack/232.cpp)
add_executable(225 Stack/225.cpp)
add_executable(ListTest List/ListTest.cpp)
add_executable(20 Stack/20.cpp)
add_executable(1047 Stack/1047.cpp)